deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-aviones
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-aviones
  template:
    metadata:
      labels:
        app: api-aviones
    spec:
      containers:
      - name: api-aviones
        image: gcr.io/gravity-419021/gravity:latest
        ports:
        - containerPort: 443
